k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: 543816070942.dkr.ecr.us-east-1.amazonaws.com/shubham_argocd_todo_java:1cd58f96c247e409eae9dfce00d68057cc70cc5b
          ports:
            - containerPort: 8080
